--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "docker:build": "docker-compose build",
-    "docker:up": "docker-compose up",
-    "docker:down": "docker-compose down",
-    "docker:deps": "docker-compose up postgres mongodb redis",
-    "docker:db:reset": "docker-compose down -v && docker-compose up -d postgres mongodb redis",
-    "docker:logs": "docker-compose logs -f",
+    "docker:build": "docker compose build",
+    "docker:up": "docker compose up",
+    "docker:down": "docker compose down",
+    "docker:deps": "docker compose up postgres mongodb redis",
+    "docker:db:reset": "docker compose down -v && docker compose up -d postgres mongodb redis",
+    "docker:logs": "docker compose logs -f",
     "start:dev": "nx run-many --target=serve --all --parallel",
     "start:marketing": "nx serve marketing",
     "start:app": "nx serve app",
     "start:services": "nx run-many --target=serve --projects=auth-service,environment-service,challenge-service,progress-service,terminal-service --parallel",
-    "start:deps": "docker-compose up",
+    "start:deps": "docker compose up",
     "build:all": "nx run-many --target=build --all",
     "test:all": "nx run-many --target=test --all",
     "lint:all": "nx run-many --target=lint --all",
