--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,8 +7,8 @@
     "importHelpers": true,
     "isolatedModules": true,
     "lib": ["es2022", "dom"],
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
@@ -17,14 +17,6 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2022",
-    "customConditions": ["development"],
-    "baseUrl": ".",
-    "paths": {
-      "@kasm-pro/api-interfaces": ["libs/api-interfaces/src/index.ts"],
-      "@kasm-pro/ui": ["libs/ui/src/index.ts"],
-      "@kasm-pro/terminal": ["libs/terminal/src/index.ts"],
-      "@kasm-pro/validation": ["libs/validation/src/index.ts"],
-      "@kasm-pro/util": ["libs/util/src/index.ts"]
-    }
+    "customConditions": ["development"]
   }
 }
