--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -2,6 +2,9 @@
   "name": "@kasm-pro/marketing",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "dev": "next dev -p 4202"
+  },
   "dependencies": {
     "next": "~15.2.4",
     "react": "19.0.0",
