--- a/package.json
+++ b/package.json
@@ -43,22 +43,23 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.36",
+    "@tailwindcss/postcss": "^4.1.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^3.0.0",
-    "autoprefixer": "10.4.13",
+    "autoprefixer": "^10.4.21",
     "esbuild": "^0.19.2",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "21.0.3",
-    "postcss": "8.4.38",
+    "postcss": "^8.5.3",
     "prettier": "^2.6.2",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
