--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "nx": "21.0.3",
     "postcss": "^8.5.3",
     "prettier": "^2.6.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
@@ -78,6 +78,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
