fixed tailwind import issue

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@kasm-pro/app",
   "version": "0.0.1",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@kasm-pro/ui": "*"
+  }
 }
