--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "next": "~15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router-dom": "6.29.0",
+    "react-router-dom": "^7.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tailwind-merge": "^3.3.0",
