--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.36",
     "@tailwindcss/postcss": "^4.1.7",
+    "@types/compression": "^1.8.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
+    "@types/passport-jwt": "^4.0.1",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
@@ -75,24 +77,45 @@
     "libs/*"
   ],
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
+    "@nestjs/bull": "^11.0.2",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-socket.io": "^10.4.17",
+    "@nestjs/throttler": "^6.4.0",
+    "@nestjs/websockets": "^10.4.17",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.7",
     "async-mutex": "^0.5.0",
     "axios": "^1.6.0",
+    "bull": "^4.16.5",
+    "cache-manager": "^6.4.3",
+    "cache-manager-redis-store": "^3.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compression": "^1.8.0",
+    "helmet": "^8.1.0",
     "lucide-react": "^0.511.0",
     "next": "~15.2.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "redis": "^5.1.0",
     "redux-persist": "^6.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.0"
   }
