--- a/package.json
+++ b/package.json
@@ -90,10 +90,12 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/platform-socket.io": "^10.4.17",
     "@nestjs/throttler": "^6.4.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^10.4.17",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.7",
@@ -108,10 +110,13 @@
     "clsx": "^2.1.1",
     "compression": "^1.8.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
     "lucide-react": "^0.511.0",
+    "mongoose": "^8.15.0",
     "next": "~15.2.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.16.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-redux": "^9.2.0",
@@ -123,6 +128,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.0",
-    "tw-animate-css": "^1.3.0"
+    "tw-animate-css": "^1.3.0",
+    "typeorm": "^0.3.24"
   }
 }
