--- a/apps/app/Dockerfile
+++ b/apps/app/Dockerfile
@@ -10,7 +10,7 @@ COPY tsconfig*.json ./
 COPY nx.json ./
 
 # Install ALL dependencies (including dev dependencies for build)
-RUN npm ci --frozen-lockfile
+RUN npm ci
 
 # Copy source code and workspace files
 COPY apps/app ./apps/app
@@ -36,9 +36,7 @@ RUN addgroup -g 1001 -S nodejs && \
 
 # Copy package.json and install only production dependencies + vite
 COPY --from=builder /app/package*.json ./
-RUN npm ci --only=production --frozen-lockfile && \
-    npm install vite@^6.0.0 --save && \
-    npm cache clean --force
+RUN npm ci --only=production
 
 # Copy built application from builder stage (Vite builds to apps/app/dist)
 COPY --from=builder --chown=vite:nodejs /app/apps/app/dist ./dist
