--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "docker:up": "docker compose up",
     "docker:down": "docker compose down",
     "docker:deps": "docker compose up postgres mongodb redis",
+    "docker:services": "docker compose up postgres mongodb redis api-gateway auth-service environment-service challenge-service progress-service terminal-service -d",
     "docker:db:reset": "docker compose down -v && docker compose up -d postgres mongodb redis",
     "docker:logs": "docker compose logs -f",
     "start:dev": "nx run-many --target=serve,dev --all --parallel",
     "start:marketing": "nx serve marketing",
     "start:app": "nx serve app",
-    "start:services": "nx run-many --target=serve --projects=auth-service,environment-service,challenge-service,progress-service,terminal-service --parallel",
+    "start:services": "nx run-many --target=serve --projects=api-gateway,auth-service,environment-service,challenge-service,progress-service,terminal-service --parallel",
     "start:deps": "docker compose up",
     "build:all": "nx run-many --target=build --all",
     "test:all": "nx run-many --target=test --all",
@@ -83,6 +84,7 @@
     "libs/*"
   ],
   "dependencies": {
+    "@keyv/redis": "^4.4.0",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/bull": "^11.0.2",
     "@nestjs/cache-manager": "^3.0.1",
@@ -103,7 +105,7 @@
     "axios": "^1.6.0",
     "bull": "^4.16.5",
     "cache-manager": "^6.4.3",
-    "cache-manager-redis-store": "^3.0.1",
+    "cacheable": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
@@ -111,6 +113,7 @@
     "compression": "^1.8.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
+    "keyv": "^5.3.3",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.15.0",
     "next": "~15.2.4",
@@ -121,7 +124,6 @@
     "react-dom": "19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
-    "redis": "^5.1.0",
     "redux-persist": "^6.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
